--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
+    "acorn": "^6.4.2",
     "autoprefixer": "^6.7.2",
     "axios": "^0.16.1",
     "babel-core": "^6.22.1",
@@ -46,7 +47,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "json-loader": "^0.5.4",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
